lib/knob.h

/**************** Below is the interface for Julia *********************/

struct MatrixKnob;
struct FunctionKnob;
MatrixKnob* GetMatrixKnob(FunctionKnob* fknob, int i);
/**
 * w = alpha*A*x + beta*y + gamma
 */
void SpMV(
    int m, int n,
    double *w,
    double alpha,
    int *A_colptr, int *A_rowval, double *A_nzval,
    double *x,
    double beta,
    double *y,
    double gamma,
    double *z,
    FunctionKnob *fknob);
void SpMVComplex(
    int m, int n,
    double _Complex *w,
    double alpha,
    int *A_colptr, int *A_rowval, double *A_nzval,
    double _Complex *x,
    double beta,
    double _Complex *y,
    double gamma,
    double _Complex *z,
    FunctionKnob *fknob);
int *GetRowReorderingVector(FunctionKnob *fknob, int *len);
int *GetRowInverseReorderingVector(FunctionKnob *fknob, int *len);
int *GetColReorderingVector(FunctionKnob *fknob, int *len);
int *GetColInverseReorderingVector(FunctionKnob *fknob, int *len);