lib/CSR_Interface.h

typedef struct CSR_Handle CSR_Handle;
// const/destruct
CSR_Handle *CSR_Create(int numRows, int numCols, int *rowptr, int *colidx, double *values);
void CSR_Destroy(CSR_Handle *A);
// w = alpha*A*x + beta*y + gamma
void CSR_MultiplyWithVector(
  double *w,
  double alpha, const CSR_Handle *A, const double *x,
  double beta, const double *y,
  double gamma);
// return dot(x*y)
double dot(int n, const double *x, const double *y);
// w = x./y
void pointwiseDivide(int n, double *w, const double *x, const double *y);
// w = x.*y
void pointwiseMultiply(int n, double *w, const double *x, const double *y);
// sum(x)
double sum(int n, const double *x);
// minimum(x)
double minimum(int n, const double *x);
// w = min(x, alpha)
void min(int n, double *w, const double *x, double alpha);