src/lib-interface.jl


function get_reordering_vectors(
    fknob :: Ptr{Void}
 )
    m = Ref{Cint}(0)
    n = Ref{Cint}(0)
    row_perm = ccall((:GetRowReorderingVector, LIB_PATH), Ptr{Cint},
         (Ptr{Void}, Ref{Cint}),
         fknob, m)
    row_inv_perm = ccall((:GetRowInverseReorderingVector, LIB_PATH), Ptr{Cint},
         (Ptr{Void}, Ref{Cint}),
         fknob, m)
    col_perm = ccall((:GetColReorderingVector, LIB_PATH), Ptr{Cint},
         (Ptr{Void}, Ref{Cint}),
         fknob, n)
    col_inv_perm = ccall((:GetColInverseReorderingVector, LIB_PATH), Ptr{Cint},
         (Ptr{Void}, Ref{Cint}),
         fknob, n)
    pointer_to_array(row_perm, m[]), pointer_to_array(row_inv_perm, m[]), pointer_to_array(col_perm, n[]), pointer_to_array(col_inv_perm, n[])
end

@doc """
Return a new representation of the sparse matrix, which is in CSC 
format, in CSR format.
"""
function create_CSR(A :: SparseMatrixCSC)
    ccall((:CSR_Create, LIB_PATH), Ptr{Void},
        (Cint, Cint, Ptr{Cint}, Ptr{Cint}, Ptr{Cdouble}),
        A.n, A.m, pointer(A.colptr), pointer(A.rowval), pointer(A.nzval))
end

@doc """ Destroy the CSR representation of the sparse matrix. """
function destroy_CSR(A :: Ptr{Void})
    ccall((:CSR_Destroy, LIB_PATH), Void, (Ptr{Void},), A)
end

@doc """ w = (alpha*A*x + beta*y + gamma).*z """
function SpMV!(
    w     :: Vector, 
    alpha :: Number, 
    A     :: SparseMatrixCSC, 
    x     :: Vector, 
    beta  :: Number, 
    y     :: Vector, 
    gamma :: Number,
    z     :: Vector,
    fknob :: Ptr{Void} = C_NULL # fknob == C_NULL => A is symmetric so we can directly call CSR_MultiplyWithVector with CSC matrix
)
    assert(length(w) == length(y) || length(y) == 0)
    assert(length(w) == length(z) || length(z) == 0)

    if use_SPMP
        if fknob == C_NULL
          A1 = create_CSR(A)
          ccall((:CSR_MultiplyWithVector, LIB_PATH), Void,
                (Ptr{Cdouble}, Cdouble, Ptr{Void}, Ptr{Cdouble}, Cdouble, Ptr{Cdouble}, Cdouble, Ptr{Cdouble}),
                pointer(w), alpha, A1, pointer(x), beta, length(y) == 0 ? C_NULL : pointer(y), gamma, length(z) == 0 ? C_NULL : pointer(z))
          destroy_CSR(A1)
        else
          mknob_A = ccall((:GetMatrixKnob, LIB_PATH), Ptr{Void}, (Ptr{Void}, Cint), fknob, 0)
          assert(mknob_A != C_NULL)
          fill_matrix_info_once(mknob_A, A)

          ccall((:SpMV, LIB_PATH), Void,
                (Cint, Cint,
                 Ptr{Cdouble},
                 Cdouble, Ptr{Cint}, Ptr{Cint}, Ptr{Cdouble},
                 Ptr{Cdouble},
                 Cdouble, Ptr{Cdouble},
                 Cdouble,
                 Ptr{Cdouble},
                 Ptr{Void}),
                size(A, 1), size(A, 2),
                w,
                alpha, A.colptr, A.rowval, A.nzval,
                x,
                beta, length(y) == 0 ? C_NULL : y,
                gamma,
                length(z) == 0 ? C_NULL : z,
                fknob)
        end
        w
    else
        # use Julia implementation
        w[:] = alpha * A * x + beta * y + gamma
    end
end

@doc """ w = alpha*A*x + beta*y + gamma """
SpMV!(
    w     :: Vector, 
    alpha :: Number, 
    A     :: SparseMatrixCSC, 
    x     :: Vector, 
    beta  :: Number, 
    y     :: Vector, 
    gamma :: Number,
    fknob :: Ptr{Void} = C_NULL) =
    SpMV!(w, alpha, A, x, beta, y, gamma, Array{Float64,1}[], fknob)

@doc """ y = A*x """
SpMV!(y :: Vector, A :: SparseMatrixCSC, x :: Vector, fknob :: Ptr{Void} = C_NULL) = 
    SpMV!(y, one(eltype(x)), A, x, zero(eltype(y)), y, zero(eltype(x)), fknob)

@doc """ w = alpha*A*x + beta*y """
function SpMV!(
    w     :: Vector{Complex128}, 
    alpha :: Number, 
    A     :: SparseMatrixCSC, 
    x     :: Vector{Complex128}, 
    beta  :: Number, 
    y     :: Vector{Complex128}, 
    fknob :: Ptr{Void} = C_NULL # fknob == C_NULL => A is symmetric so we can directly call CSR_MultiplyWithVector with CSC matrix
)
    assert(length(w) == length(y) || length(y) == 0)

    if use_SPMP
        if fknob == C_NULL
          A1 = create_CSR(A)
          ccall((:CSR_MultiplyWithComplexVector, LIB_PATH), Void,
                (Ptr{Complex128}, Cdouble, Ptr{Void}, Ptr{Complex128}, Cdouble, Ptr{Complex128}, Cdouble, Ptr{Complex128}),
                pointer(w), alpha, A1, pointer(x), beta, length(y) == 0 ? C_NULL : pointer(y), 0, C_NULL)
          destroy_CSR(A1)
        else
          mknob_A = ccall((:GetMatrixKnob, LIB_PATH), Ptr{Void}, (Ptr{Void}, Cint), fknob, 0)
          assert(mknob_A != C_NULL)
          fill_matrix_info_once(mknob_A, A)

          ccall((:SpMVComplex, LIB_PATH), Void,
                (Cint, Cint,
                 Ptr{Complex128},
                 Cdouble, Ptr{Cint}, Ptr{Cint}, Ptr{Cdouble},
                 Ptr{Complex128},
                 Cdouble, Ptr{Complex128},
                 Cdouble,
                 Ptr{Complex128},
                 Ptr{Void}),
                size(A, 1), size(A, 2),
                w,
                alpha, A.colptr, A.rowval, A.nzval,
                x,
                beta, length(y) == 0 ? C_NULL : y,
                0,
                C_NULL,
                fknob)
        end
    else
        # use Julia implementation
        w[:] = alpha * A * x + beta * y
    end
end

@doc """ w = alpha*A*x + beta*y + gamma """
# TODO: need a real 8 args SpMV! gamma is not handled yet.
SpMV!(
    w     :: Vector{Complex128}, 
    alpha :: Number, 
    A     :: SparseMatrixCSC, 
    x     :: Vector{Complex128}, 
    beta  :: Number, 
    y     :: Vector{Complex128}, 
    gamma :: Number,
    fknob :: Ptr{Void} = C_NULL) =
    SpMV!(w, alpha, A, x, beta, y, fknob)

@doc """ alpha*A*x + beta*y + gamma """
function SpMV(
    alpha :: Number, 
    A     :: SparseMatrixCSC, 
    x     :: Vector, 
    beta  :: Number, 
    y     :: Vector, 
    gamma :: Number,
    fknob :: Ptr{Void} = C_NULL
)
   # When fknob is not null, we just use
   # the CSC input matrix as if it's CSR
   # assuming the input matrix is symmetric
   w = Array(Cdouble, size(A, 1))
   SpMV!(w, alpha, A, x, beta, y, gamma, fknob)
   w
end

@doc """ alpha*A*x + beta*y """
SpMV(alpha :: Number, A :: SparseMatrixCSC, x :: Vector, beta :: Number, y :: Vector, fknob :: Ptr{Void} = C_NULL) =
    SpMV(alpha, A, x, beta, y, zero(eltype(x)), fknob)

@doc """ alpha*A*x + y """
SpMV(alpha :: Number, A :: SparseMatrixCSC, x :: Vector, y :: Vector, fknob :: Ptr{Void} = C_NULL) = 
    SpMV(alpha, A, x, one(eltype(y)), y, zero(eltype(x)), fknob)

@doc """ alpha*A*x """
SpMV(alpha :: Number, A :: SparseMatrixCSC, x :: Vector, fknob :: Ptr{Void} = C_NULL) = 
    SpMV(alpha, A, x, zero(eltype(x)), Array{Float64,1}[], zero(eltype(x)), fknob)

@doc """ A*x """
SpMV(A :: SparseMatrixCSC, x :: Vector, fknob :: Ptr{Void} = C_NULL) = 
    SpMV(one(eltype(x)), A, x, zero(eltype(x)), Array{Float64,1}[], zero(eltype(x)), fknob)

@doc """ Dot product of vector x and y """
function dot(
    x :: Vector, 
    y :: Vector
)
  assert(length(x) == length(y))

  if use_SPMP #&& length(x) > 4096
    ccall((:dot, LIB_PATH), Cdouble,
          (Cint, Ptr{Cdouble}, Ptr{Cdouble}),
          length(x), pointer(x), pointer(y))
  else
    Base.dot(x, y)
  end
end

@doc """ Dot product of vector x and y """
function dot(
    x :: Vector{Complex128}, 
    y :: Vector{Complex128}
)
  assert(length(x) == length(y))

  if use_SPMP #&& length(x) >= 3072
    ccall((:dot, LIB_PATH), Complex128,
          (Cint, Ptr{Complex128}, Ptr{Complex128}),
          length(x), pointer(x), pointer(y))
  else
    Base.dot(x, y)
  end
end

@doc """ Dot product of vector x and y """
function dot(
    x :: Vector{Complex128}, 
    y :: Vector{Complex128}
)
  assert(length(x) == length(y))

  if use_SPMP
    ccall((:dot, LIB_PATH), Complex128,
          (Cint, Ptr{Complex128}, Ptr{Complex128}),
          length(x), pointer(x), pointer(y))
  else
    dot(x, y)
  end
end

@doc """ 2-norm of vector x """
function norm(
    x :: Vector
)
  sqrt(dot(x, x))
end

@doc """ 2-norm of vector x """
function norm(
    x :: Vector{Complex128}
)

  if use_SPMP #&& length(x) >= 8192
    ccall((:norm_complex, LIB_PATH), Cdouble,
          (Cint, Ptr{Complex128}),
          length(x), pointer(x))
  else
    Base.norm(x)
  end
end

@doc """ sum of vector x """
function sum(
    x :: Vector
)
  if use_SPMP
    ccall((:sum, LIB_PATH), Cdouble,
          (Cint, Ptr{Cdouble}),
          length(x), x)
  else
    Base.sum(x)
  end
end

function minimum(
    x :: Vector
)
  if use_SPMP
    ccall((:minimum, LIB_PATH), Cdouble,
          (Cint, Ptr{Cdouble}),
          length(x), x)
  else
    Base.minimum(x)
  end
end

function abs!(
    w :: Vector,
    x :: Vector
)
  if use_SPMP
    ccall((:CSR_abs, LIB_PATH), Void,
          (Cint, Ptr{Cdouble}, Ptr{Cdouble}),
          length(x), w, x)
    w
  else
    w[:] = Base.abs(x)
  end
end

function abs!(
    w :: Vector{Float64},
    x :: Vector{Complex128}
)
  if use_SPMP
    ccall((:CSR_abs_complex, LIB_PATH), Void,
          (Cint, Ptr{Cdouble}, Ptr{Complex128}),
          length(x), w, x)
  else
    w[:] = Base.abs(x)
  end
end

function abs!(
    w :: Vector{Float64},
    x :: Vector{Complex128}
)
  if use_SPMP
    ccall((:CSR_abs_complex, LIB_PATH), Void,
          (Cint, Ptr{Cdouble}, Ptr{Complex128}),
          length(x), w, x)
  else
    w[:] = abs(x)
  end
end

function exp!(
    w :: Vector,
    x :: Vector
)
  if use_SPMP
    ccall((:CSR_exp, LIB_PATH), Void,
          (Cint, Ptr{Cdouble}, Ptr{Cdouble}),
          length(x), w, x)
    w
  else
    w[:] = Base.exp(x)
  end
end

function log1p!(
    w :: Vector,
    x :: Vector
)
  if use_SPMP
    ccall((:CSR_log1p, LIB_PATH), Void,
          (Cint, Ptr{Cdouble}, Ptr{Cdouble}),
          length(x), w, x)
    w
  else
    w[:] = Base.log1p(x)
  end
end

function min!(
    w     :: Vector,
    x     :: Vector,
    alpha :: Number
)
  assert(length(x) == length(w))

  if use_SPMP
    ccall((:min, LIB_PATH), Void,
          (Cint, Ptr{Cdouble}, Ptr{Cdouble}, Cdouble),
          length(x), w, x, alpha)
    w
  else
    w[:] = Base.min(x, alpha)
  end
end

@doc """ copy x to y """
function copy!(
    y :: Vector,
    x :: Vector
)
  WAXPB!(y, 1, x, 0)
end

@doc """ w = x./y """
function element_wise_divide!(
    w :: Vector, 
    x :: Vector, 
    y :: Vector
)
  assert(length(x) == length(y))

  if use_SPMP
    ccall((:pointwiseDivide, LIB_PATH), Void,
          (Cint, Ptr{Cdouble}, Ptr{Cdouble}, Ptr{Cdouble}),
          length(x), pointer(w), pointer(x), pointer(y))
    w
  else
    w[:] = x./y
  end
end

@doc """" Alocate space for and return element-wise division of two vectors. """
function element_wise_divide(
    x :: Vector, 
    y :: Vector
)
  w = Array(Cdouble, length(x))
  element_wise_divide!(w, x, y)
  w
end

@doc """" w = x.*y """
function element_wise_multiply!(
    w :: Vector, 
    x :: Vector, 
    y :: Vector
)
  assert(length(x) == length(y))

  if use_SPMP
    ccall((:pointwiseMultiply, LIB_PATH), Void,
          (Cint, Ptr{Cdouble}, Ptr{Cdouble}, Ptr{Cdouble}),
          length(x), pointer(w), pointer(x), pointer(y))
    w
  else
    w[:] = x.*y
  end
end

@doc """" w = x.*y """
function element_wise_multiply!(
    w :: Vector{Complex128}, 
    x :: Vector{Float64}, 
    y :: Vector{Complex128}
)
  assert(length(x) == length(y))

  if use_SPMP
    ccall((:pointwiseMultiplyRealWithComplex, LIB_PATH), Void,
          (Cint, Ptr{Complex128}, Ptr{Float64}, Ptr{Complex128}),
          length(x), pointer(w), pointer(x), pointer(y))
  else
    w[:] = x.*y
  end
end

@doc """" w = x.*y """
function element_wise_multiply!(
    w :: Vector{Complex128}, 
    x :: Vector{Float64}, 
    y :: Vector{Complex128}
)
  assert(length(x) == length(y))

  if use_SPMP
    ccall((:pointwiseMultiplyRealWithComplex, LIB_PATH), Void,
          (Cint, Ptr{Complex128}, Ptr{Float64}, Ptr{Complex128}),
          length(x), pointer(w), pointer(x), pointer(y))
  else
    w[:] = x.*y
  end
end
